crates/aranya-policy-compiler/tests/data/facts/incomplete_key_invalid_fact_literal.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: fact literal does not match definition: The number of Fact keys don't match the definition
  |
1 | fact Foo[i int] => {a string}
  | ^----------------------------
  | |
  | The number of Fact keys don't match the definition
  | definition has 1 keys but the expression has 0 keys
